# reflitao-ai

./: .gitignore  CHANGELOG.md  Containerfile  Dockerfile  LICENSE  README.md  docker-compose.yml  plan.md  plan.pip_install.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
app/: app.py
reflitao/: __init__.py  __main__.py  bot.py  config.py
reflitao/handlers/: get_cmd.py  image_cmd.py  media.py  prompt_cmd.py  session_cmd.py  text_msg.py
reflitao/services/: image.py  llm.py  whisper.py
